# polaris-bot

./: .gitignore  LICENSE  README.md
Installation/: README.md  faketext.txt
esp32/: README.md
esp32/microROS_PlatfromIO/Test_MicroROS_ESP32/: platformio.ini
esp32/microROS_PlatfromIO/Test_MicroROS_ESP32/src/: main.cpp
esp32/microros_ws/firmware/dev_ws/install/: local_setup.sh  setup.sh
esp32/microros_ws/firmware/dev_ws/log/: latest_build
esp32/microros_ws/firmware/mcu_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
esp32/microros_ws/install/: local_setup.sh  setup.sh  setup.zsh
esp32/microros_ws/log/: latest_build
hardware/: README.md
ros2/: README.md
ros2_ws/: README.md
ros2_ws/apps/: README.md
ros2_ws/apps/polaris_controller_interface/: app.c
ros2_ws/apps/polaris_controller_interface/libs/: e12Com.c  e12Com.h
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/log/: latest_build
ros2_ws/src/messages/: CMakeLists.txt  README.md
ros2_ws/src/messages/msg/: RobotMotorSpeed.msg
ros2_ws/src/my_diff_drive_bot/: CMakeLists.txt  README.md
ros2_ws/src/my_diff_drive_bot/config/: drive_bot.rviz  view_bot.rivz.rviz
ros2_ws/src/my_diff_drive_bot/description/: lidar.xacro  ros2_control.xacro
ros2_ws/src/my_message/: CMakeLists.txt
ros2_ws/src/my_message/msg/: MyMessage.msg
ros2_ws/src/polaris_bot_description/: CMakeLists.txt
ros2_ws/src/polaris_bot_description/launch/: display.launch.py
ros2_ws/src/polaris_controller/: CMakeLists.txt  polaris_controller.xml
ros2_ws/src/polaris_controller/bringup/config/: polaris_controller.yaml
ros2_ws/src/polaris_controller/bringup/launch/: diffbot.launch.py
ros2_ws/src/polaris_controller/description/launch/: view_robot.launch.py
ros2_ws/src/polaris_controller/description/ros2_control/: robot.ros2_control.xacro
ros2_ws/src/polaris_controller/description/urdf/: diffbot.urdf.xacro
ros2_ws/src/polaris_controller/hardware/: polaris_system.cpp
ros2_ws/src/polaris_controller/hardware/include/polaris_controller/: polaris_system.hpp  wheel.hpp
ros2_ws/src/polaris_controller/test/: test_urdf_xacro.py  test_view_robot_launch.py
ros2_ws/src/services/: CMakeLists.txt
(+515 files in other folders)
